--- a/index.html
+++ b/index.html
@@ -464,6 +464,12 @@
       </div>
       <div class="hi-reserchBox"></div>
     </section>
+    <div class="search-container">
+      <input id="address" type="text" placeholder="주소를 입력하세요" />
+      <button id="searchButton">검색</button>
+    </div>
+    <div id="map"></div>
+  </div>
 
 
 
